--- a/SDP/package.json
+++ b/SDP/package.json
@@ -54,6 +54,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^2.0.22",
     "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7",
